# todo-app

./: .gitignore  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: python-tests.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
specs/001-taskmaster-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-taskmaster-cli/checklists/: requirements.md
specs/001-taskmaster-cli/contracts/: cli-commands.md
src/taskmaster/: __init__.py  main.py  models.py  storage.py
taskmaster/: README.md  pyproject.toml  tox.ini
taskmaster/src/taskmaster/: main.py
taskmaster/tests/: test_cli.py  test_main.py
tests/: conftest.py  test_add_task.py  test_complete_task.py  test_delete_task.py  test_list_tasks.py
