[tool.poetry]
name = "taskmaster"
version = "0.1.0"
description = "A CLI application for task management with a rich UI."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/taskmaster"
repository = "https://github.com/yourusername/taskmaster"
keywords = ["cli", "task management", "python", "uv", "json"]

[tool.poetry.dependencies]
python = "^3.12"
uv = "^0.0.1"  # Replace with the actual version of the `uv` library you intend to use

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"